tests/ui/async-await/async-drop/elaborate-index-out-of-bounds.stderr
error[E0046]: not all trait items implemented, missing: `drop`
  --> $DIR/elaborate-index-out-of-bounds.rs:14:1
   |
LL | impl AsyncDrop for HasIncompleteAsyncDrop {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `drop` in implementation
   |
   = help: implement the missing item: `async fn drop(self: Pin<&mut Self>) { todo!() }`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0046`.
